--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asgiref==3.3.1
+asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
-Django==3.1.7
+Django==3.2
 idna==2.10
 numpy==1.19.5
 pandas==1.1.5
@@ -10,4 +10,5 @@ pytz==2021.1
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
+typing-extensions==3.7.4.3
 urllib3==1.26.4
